--- a/TODO
+++ b/TODO
@@ -1,1 +1,125 @@
-- Simpan data STNK di member
+ install ini sebelum install kivy : libgl1-mesa-dev
+
+
+Protocol PCLess Interface
+header = char 0xA6 / char 166
+Footer = char 0xA9 / char 169
+Semua paket data selalu diawali dengan header dan diakhiri dengan footer, baik command maupun response
+
+Command ke device:
+O1N = relay 1 on
+response : OUT1ONOK
+
+O2N = relay 2 on
+response : OUT2ONOK
+
+OUT3ON = relay 3 on
+response : OUT3ONOK
+
+OUT4ON = relay 4 on
+response : OUT4ONOK
+
+OUT1OFF = relay 1 off
+response : OUT1OFFOK
+
+OUT2OFF = relay 2 off
+response : OUT2OFFOK
+
+OUT3OFF = relay 3 off
+response : OUT3OFFOK
+
+OUT4OFF = relay 4 off
+response : OUT4OFFOK
+
+OPEN1 = relay 2 off, relay 3 off, relay 1 on 1 detik, lalu off
+response : OPEN1OK
+
+CLOSE1 = relay 1 off, relay 3 off, relay 2 on 1 detik, lalu off
+response : CLOSE1OK
+
+STOP1 = relay 1 off, relay 2 off, relay 3 on 1 detik, lalu off
+response : STOP1OK
+
+OPEN2 = relay 1 on, relay 2 off
+response : OPEN2OK
+
+CLOSE2 = relay 2 on, relay 1 off
+response : CLOSE2OK
+
+STOP2 = relay 1 off, relay 2 off
+response : STOP2OK
+
+PING = mengecek apakah device berfungsi atau tidak. Jika tidak ada respon, maka ada problem pada device atau koneksi
+response : PINGOK
+
+STAT = mengecek status input dan output
+response : STATabcdefgh
+a = 1 jika input 1 on, a = 0 jika input 1 off
+b = 1 jika input 2 on, a = 0 jika input 2 off
+c = 1 jika input 3 on, a = 0 jika input 3 off
+d = 1 jika input 4 on, a = 0 jika input 4 off
+e = 1 jika output 1 on, a = 0 jika output 1 off
+f = 1 jika output 2 on, a = 0 jika output 2 off
+g = 1 jika output 3 on, a = 0 jika output 3 off
+h = 1 jika output 4 on, a = 0 jika output 4 off
+
+TRIG1 = relay 1 on 1 detik, lalu off
+response : TRIG1OK
+
+TRIG2 = relay 2 on 1 detik, lalu off
+response : TRIG2OK
+
+TRIG3 = relay 3 on 1 detik, lalu off
+response : TRIG3OK
+
+TRIG4 = relay 4 on 1 detik, lalu off
+response : TRIG4OK
+
+MTxxxxx = play track MP3 nomor xxxxx
+xxxxx = 5 digit nomor track
+response : MTOK
+apabila track MP3 valid, setelah selesai play, device mengirimkan response : PLAYEND
+apabila track MP3 tidak valid, device mengirimkan response : NOTRACK
+
+MS = stop play track MP3
+response : MS
+
+PRxyyyyyyy = kirim data ke printer serial (baud rate tergantung nilai x, data bit 8, stop bit 1, parity none)
+x = baud rate
+x = 0, baud 1200
+x = 1, baud 2400
+x = 2, baud 4800
+x = 3, baud 9600
+x = 4, baud 19200
+x = 5, baud 38400
+yyyyy = data yang akan dikirim ke printer, max 1024 byte (1Kb)
+response : PROK
+
+DSyyyyyy = kirim data ke external display
+yyyyy = data yang dikirim
+response : DSOK 
+
+
+Data dari device:
+PTxxxxx = printer serial mengirimkan response
+xxxxx = data dari printer serial
+
+Wxxxxxx = ada data kartu wiegand
+xxxxxx = 6 digit atau 8 digit data kartu RFID wiegand
+6 digit untuk wiegand-26, 8 digit untuk wiegand-34 (auto detect)
+
+header = char 0xA6 / char 166
+Footer = char 0xA9 / char 169
+Semua paket data selalu diawali dengan header dan diakhiri dengan footer, baik command maupun response
+
+jika input 1 berubah status dari OFF menjadi ON, interface akan mengirimkan data IN1ON
+jika input 1 berubah status dari ON menjadi OFF, interface akan mengirimkan data IN1OFF
+jika input 2 berubah status dari OFF menjadi ON, interface akan mengirimkan data IN2ON
+jika input 2 berubah status dari ON menjadi OFF, interface akan mengirimkan data IN2OFF
+jika input 3 berubah status dari OFF menjadi ON, interface akan mengirimkan data IN3ON
+jika input 3 berubah status dari ON menjadi OFF, interface akan mengirimkan data IN3OFF
+jika input 4 berubah status dari OFF menjadi ON, interface akan mengirimkan data IN4ON
+jika input 4 berubah status dari ON menjadi OFF, interface akan mengirimkan data IN4OFF
+jika interface menerima data valid dari card reader Wiegand-26/34 (auto detect), maka interface akan mengirimkan data Waaaaaaaa
+aaaaaaaa = 8/10 digit desimal data nomor UID kartu RFID
+(8 digit untuk Wiegand 26, 10 digit untuk Wiegand 34)
