--- a/TODO
+++ b/TODO
@@ -149,5 +149,12 @@ Press Control-O and then Control-X to save the file and exit.
 
 ======================
 Print pake python
+    - test
+    - ticket
+    - laporan
+
 profile
+
+filter data
+
 
