--- a/TODO
+++ b/TODO
@@ -186,6 +186,14 @@ DD = 2 digit tanggal
 MM = 2 digit bulan
 YY = 2 digit tahun
 
-* * * * * cd ~/apps/parking-system && php artisan schedule:run >> /dev/null 2>&1
+* * * * * www-data cd /home/server/apps/parking-system && php artisan schedule:run >> /dev/null 2>&1
+
+ISSUE:
+
+- jumlah kendaraan masih terparkir masih salah
+- perhitungan kapasitas masih salah. masih bisa di minus di report
+- chart di report
+
+
 
 
